# hunter

./: .travis.yml  appveyor.yml  jenkins.py
.github/workflows/: ci.yml
.github/workflows/ci/: build.cmd  build.sh
_data/projects/: Assimp.json  Eigen.json  KhronosDataFormat.json  Protobuf.json  Qt.json  QtPropertyEditor.json  QtQmlManager.json  RapidJSON.json  SPIRV-Headers.json  abseil.json  apg.json  astc-encoder.json  basis_universal.json  botan.json  cgltf.json  cpp-statsd-client.json  crc32c.json  draco.json  etc2comp.json  fast_obj.json  flatbuffers.json  jpeg-compressor.json  jsmn.json  libsodium.json  meshoptimizer.json  miniz.json  range-v3.json  rocksdb.json  smol-v.json  spdlog.json  tinyexr.json  tsl_hat_trie.json  tsl_robin_map.json
cmake/configs/: default.cmake
cmake/modules/: hunter_generate_qt_5_15_info.cmake  hunter_generate_qt_info.cmake
cmake/projects/Assimp/: hunter.cmake
cmake/projects/Jpeg/: hunter.cmake
cmake/projects/Protobuf/: hunter.cmake
cmake/projects/Qt/: generate.sh  hunter.cmake  hunter.cmake.in
cmake/projects/bento4/: hunter.cmake
cmake/projects/irrXML/: hunter.cmake
cmake/projects/libjpeg-turbo/: hunter.cmake
cmake/projects/libzip/: hunter.cmake
cmake/projects/miniz/: hunter.cmake
cmake/projects/re2/: hunter.cmake
examples/LodePNG/: main.cpp
examples/Qt/: CMakeLists.txt
examples/libzip/: CMakeLists.txt  boo.cpp
examples/miniz/: CMakeLists.txt  boo.cpp
examples/skia/: CMakeLists.txt  boo.cpp  config.cmake
maintenance/: create_package.sh  get_package_sha1.sh  get_sed_command.sh  get_wget_command.sh
(+52 files in other folders)
